# CS236Project2

./: CMakeLists.txt  Parameter.h  Predicate.h  README.md  datalogProgram.h  lab1  lab2  main.cpp  makefile  out.txt  project-1  project_1  test  test.txt
examplefiles/: out13.txt
lab2.dSYM/Contents/Resources/DWARF/: lab2
project-1.dSYM/Contents/: Info.plist
project-1.dSYM/Contents/Resources/DWARF/: project-1
